# CITO

./: .gitignore  .gitmodules  CMakeLists.txt  JointKinematicHessian.py  MUJOCO_LOG.TXT  README.md  ResidualModels.py  complementarity_constraints.py  complementarity_constraints_force_feedback.py  complementarity_constraints_force_free.py  croc_frame_cost.py  differential_model.py  differential_model_MJ.py  differential_model_force_MJ.py  differential_model_force_feedback.py  differential_model_force_free.py  display_trajectory.py  force_derivatives.py  friction_cone.py  go2_jumping_MJ.py  go2_takeoff_MJ.py  go2_takeoff_MJ_constraint.py  go2_walking_MJ.py  integrated_action_model_MJ.py  integrated_action_model_MJ_copy.py  numerical_difference.py  robot_env.py  solo12_3-Legs_standing.py  solo12_env.py  solo12_jumping.py  solo12_landing.py  solo12_takeoff.py  solo12_walk.py  trajectory_data.py  utils.py
bindings/: CMakeLists.txt  differential-contact-mujoco.cpp  floating-base-manipulation.cpp  integrated-contact-mujoco.cpp  main.cpp
bindings/cito/: __init__.py
bindings/utils/: copyable.hpp
examples/: go2_jumping_MJ.py  go2_takeoff_MJ.py  go2_takeoff_MJ_constraint.py  go2_walking_MJ.py  trifinger_cube.py
include/cito/: fwd.hpp  python.hpp
include/cito/actions/: differential-contact-mujoco.hpp  differential-contact-mujoco.hxx  integrated-contact-mujoco.hpp  integrated-contact-mujoco.hxx
include/cito/actuations/: floating-base-manipulation.hpp
include/cito/utils/: pin-mj-conversion.hpp  pyboost11-converter.hpp
mpc/: MJDATA.TXT  MUJOCO_LOG.TXT
mpc/config/: walking_go2.yml  walking_go2_CSQP.yml  walking_go2_FDDP.yml  walking_go2_rollout.yml
mpc/controller/: walking_go2.py
mpc/controllers/: walking_csqp.py  walking_fddp.py
mpc/demos/: go2_walking_mpc.py  launch_utils.py  simulator_rollout.py
mpc/demos/simulators/: go2_mujoco.py
python/: CallbackLogger_force.py  complementarity_constraints_force_feedback.py  complementarity_constraints_force_free.py  differential_model_MJ.py  integrated_action_model_MJ.py  utils.py
python/utils/: numerical_difference.py  utils.py
robots/: robot_env.py  test_trifinger.py
robots/go2_robot_sdk/urdf/: go2_no_limit.urdf
robots/kuka/urdf/: MJDATA.TXT  iiwa_pusher.urdf  iiwa_pusher_v2.urdf
robots/kuka/xml/: MUJOCO_LOG.TXT  iiwa_ft_sensor_ball.xml  iiwa_pusher_v2.xml
robots/pusher/: cube_ball.urdf  cube_ball.xml
robots/trifinger/: trifinger.urdf  trifinger.xml  trifinger_cube_scene.urdf  trifinger_cube_scene.xml  trifinger_scene.urdf  trifinger_scene.xml
robots/trifinger_backup/: trifinger.urdf  trifinger.xml  trifinger_scene.urdf  trifinger_scene.xml
robots/unitree_go2/: go2.xml  go2_foot_collision.xml  go2_foot_collision_cpy.xml  go2_simulation.xml  scene_foot_collision.xml  scene_simulation.xml
src/: main.cpp
src/utils/: pin-mj-conversion-finger.cpp  pin-mj-conversion.cpp
trajectory/: display_scene_MJ.py  display_trajectory.py  display_trajectory_MJ.py
trajectory/trajectory_data/: go2_jump_MJ_FDDP.npz  go2_jumping_MJ.npz  go2_takeoff_MJ.npz  go2_takeoff_MJ_CSQP.npz  go2_takeoff_MJ_CSQP001.npz  go2_takeoff_MJ_CSQP005.npz  go2_takeoff_MJ_CSQP01.npz  go2_takeoff_MJ_CSQP1.npz  go2_takeoff_MJ_CSQP2.npz  go2_takeoff_MJ_DDP.npz  go2_takeoff_MJ_FDDP.npz  go2_takeoff_MJ_FDDP1.npz  go2_takeoff_MJ_constraint.npz  go2_walking_MJ.npz  go2_walking_MJFDDP2.npz  solo12_takeoff.npz
trajectory_data/: solo12_3-Legs_standing_interesting.npz  solo12_takeoff.npz
unit_test/: differential_model_NumDiff.py  dynamics.py  force_derivatives_torch.py  frame_derivatives.py  numerical_differences.py  robot_model.py  test_cube_ball.py  unit_test_DAM.py  unit_test_DAM_CrocNumDIff.py  unit_test_DAM_MJ.py  unit_test_IAM_MJ.py  unit_test_dynamics.py  unit_test_forces.py  unit_test_frames.py  unit_test_kinematics.py  unit_test_residuals.py  unit_test_residuals_mujoco.py  unit_test_stateMapping.py  unit_test_torch.py
